cn sql hoadon, hoadon_dao